# lettre

./: .appveyor.yml  .clog.toml  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  README.rst  SECURITY.md  clippy.toml  rustfmt.toml
.build-scripts/: codecov.sh  site-upload.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: Bug_report.md
.github/workflows/: rust.yml  test.yml  website.yml
.travis/: coverage.sh  doc.sh
benches/: mailbox_parsing.rs  smtp.rs  transport_smtp.rs
docs/: 404.html  CNAME  index.html  index.json  index.xml  sitemap.xml
docs/categories/: index.html  index.xml
docs/creating-messages/: index.html  index.xml
docs/creating-messages/email/: index.html
docs/css/: theme.css
docs/getting-started/: index.html  index.xml
docs/getting-started/intro/: index.html
docs/json/: search.json
docs/sending-messages/: index.html  index.xml
docs/sending-messages/file/: index.html
docs/sending-messages/intro/: index.html
docs/sending-messages/sendmail/: index.html
docs/sending-messages/smtp/: index.html
docs/sending-messages/stub/: index.html
docs/tags/: index.html  index.xml
examples/: README.md  asyncstd1_smtp_starttls.rs  asyncstd1_smtp_tls.rs  autoconfigure.rs  basic_html.rs  builder.rs  client.rs  file_html.rs  lmtp.rs  maud_html.rs  smtp.rs  smtp_gmail.rs  smtp_selfsigned.rs  smtp_starttls.rs  smtp_tls.rs  tokio02_smtp_starttls.rs  tokio02_smtp_tls.rs  tokio03_smtp_starttls.rs  tokio03_smtp_tls.rs  tokio1_smtp_starttls.rs  tokio1_smtp_tls.rs  transport_file.rs
lettre/: CHANGELOG.md  Cargo.toml  build.rs
lettre/benches/: transport_smtp.rs
lettre/examples/: smtp.rs
lettre/src/: error.rs  lib.rs
lettre/src/file/: error.rs  mod.rs
lettre/src/sendmail/: error.rs  mod.rs
lettre/src/smtp/: authentication.rs  commands.rs  error.rs  extension.rs  mod.rs  r2d2.rs  response.rs  util.rs
lettre/src/smtp/client/: mock.rs  mod.rs  net.rs
lettre/src/stub/: error.rs  mod.rs
lettre/tests/: lib.rs  r2d2_smtp.rs  skeptic.rs  transport_file.rs  transport_sendmail.rs  transport_smtp.rs  transport_stub.rs
lettre_email/: CHANGELOG.md  Cargo.toml  build.rs
lettre_email/examples/: local.rs  smtp.rs  smtp_gmail.rs
lettre_email/src/: email.rs  error.rs  lib.rs
lettre_email/tests/: build_with_envelope.rs  skeptic.rs
src/: address.rs  authentication.rs  base64.rs  client.rs  command.rs  commands.rs  common.rs  email.rs  error.rs  executor.rs  extension.rs  lib.rs  mailer.rs  response.rs  rustls_crypto.rs  sendable_email.rs  sender.rs  smtp.rs  time.rs  tools.rs  transaction.rs
src/address/: envelope.rs  mod.rs  serde.rs  types.rs
src/builder/: encoder.rs  error.rs  message.rs  mimebody.rs  mod.rs  utf8_b.rs
src/builder/header/: content.rs  mailbox.rs  mod.rs  special.rs  textual.rs
src/builder/mailbox/: mod.rs  serde.rs  types.rs
src/client/: authentication.rs  connecter.rs  mod.rs  net.rs  server_info.rs  stream.rs
src/client/authentication/: mod.rs  plain.rs
src/email/: address.rs  error.rs  header.rs  mod.rs
src/examples/: client.rs
src/file/: error.rs  mod.rs
src/mailer/: address.rs  header.rs  mod.rs
src/message/: attachment.rs  body.rs  builder.rs  dkim.rs  encoder.rs  gnupg.rs  message.rs  mimebody.rs  mod.rs  utf8_b.rs
src/message/header/: content.rs  content_disposition.rs  content_type.rs  date.rs  mailbox.rs  mod.rs  special.rs  textual.rs
src/message/mailbox/: mod.rs  parsers.rs  serde.rs  types.rs
src/message/mailbox/parsers/: mod.rs  rfc2234.rs  rfc2821.rs  rfc2822.rs  rfc3629.rs  rfc5336.rs
src/sender/: mod.rs
src/sendmail/: error.rs  mod.rs
src/smtp/: .directory  authentication.rs  client.rs  commands.rs  common.rs  error.rs  extension.rs  lib.rs  mod.rs  response.rs  util.rs
src/smtp/client/: mock.rs  mod.rs  net.rs
src/smtpcommon/: command.rs  common.rs  extension.rs  lib.rs  mod.rs  response.rs  transaction.rs
src/stub/: mod.rs
src/transport/: error.rs  mod.rs
src/transport/file/: error.rs  mod.rs
src/transport/mailgun/: error.rs  mod.rs
src/transport/sendmail/: error.rs  mod.rs
src/transport/smtp/: async_pool.rs  async_transport.rs  authentication.rs  commands.rs  connection_url.rs  error.rs  extension.rs  mod.rs  pool.rs  r2d2.rs  response.rs  transport.rs  util.rs  wasi_transport.rs
src/transport/smtp/client/: async_connection.rs  async_net.rs  connection.rs  mock.rs  mod.rs  net.rs  tls.rs  wasi_connection.rs  wasi_net.rs
src/transport/smtp/client/tls/: boring_tls.rs  current.rs  deprecated.rs  mod.rs  native_tls.rs  rustls.rs
src/transport/smtp/pool/: async_impl.rs  mod.rs  sync_impl.rs
src/transport/stub/: mod.rs
testdata/: coredns.conf  db.example.org  email_with_png.eml
tests/: build_with_envelope.rs  docs.rs  lib.rs  r2d2_smtp.rs  skeptic.rs  transport_file.rs  transport_mailgun.rs  transport_sendmail.rs  transport_smtp.rs  transport_smtp_async_pool.rs  transport_smtp_pool.rs  transport_stub.rs
tests/builder/: skeptic.rs
website/: .gitignore  LICENSE  Makefile  book.json  book.toml  build.sh  config.toml
website/content/: README.md  SUMMARY.md
website/content/creating-messages/: _index.md  email.md
website/content/getting-started/: _index.md  intro.md
website/content/sending-messages/: _index.md  file.md  intro.md  sendmail.md  smtp.md  stub.md
website/layouts/: index.html
website/layouts/partials/: favicon.html  logo.html
website/src/: README.md  SUMMARY.md
website/src/creating-messages/: email.md
website/src/posts/: _index.md  are-we-email-yet.md  lettre-0-10.md
website/src/sending-messages/: _index.md  file.md  sendmail.md  smtp.md  stub.md
website/static/json/: search.json
website/themes/hugo-theme-learn/: README.md
website/themes/hugo-theme-learn/layouts/: index.html
website/themes/hugo-theme-learn/layouts/partials/: search.html
