[package]

name = "lettre"
version = "0.7.0"
description = "Email client"
readme = "README.md"
documentation = "https://docs.rs/lettre/"
repository = "https://github.com/lettre/lettre"
license = "MIT"
authors = ["Alexis Mousset <contact@amousset.me>"]
categories = ["email"]
keywords = ["email", "smtp", "mailer"]

[badges]
travis-ci = { repository = "lettre/lettre" }

[dependencies]
log = "^0.3"
bufstream = { version = "^0.1", optional = true }
native-tls = { version = "^0.1", optional = true }
base64 = { version = "^0.8", optional = true }
hex = { version = "^0.3", optional = true }
rust-crypto = { version = "^0.2", optional = true }
serde = { version = "^1.0", optional = true }
serde_json = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }

[dev-dependencies]
env_logger = "^0.4"

[features]
default = ["file-transport", "crammd5-auth", "smtp-transport", "sendmail-transport"]
unstable = []
serde-impls = ["serde", "serde_derive"]
file-transport = ["serde-impls", "serde_json"]
crammd5-auth = ["rust-crypto", "hex"]
smtp-transport = ["bufstream", "native-tls", "base64"]
sendmail-transport = []

[[example]]
name = "smtp"
required-features = ["smtp-transport"]
