[package]

name = "lettre_email"
version = "0.8.0" # remember to update html_root_url
description = "Email builder"
readme = "README.md"
documentation = "https://docs.rs/lettre_email/"
repository = "https://github.com/lettre/lettre"
license = "MIT"
authors = ["Alexis Mousset <contact@amousset.me>"]
categories = ["email"]
keywords = ["email", "mailer"]
build = "build.rs"

[badges]
travis-ci = { repository = "lettre/lettre_email" }

[dev-dependencies]
lettre = { version = "^0.8", path = "../lettre", features = ["smtp-transport"] }
skeptic = "^0.13"

[build-dependencies]
skeptic = "^0.13"

[dependencies]
email = "^0.0"
mime = "^0.3"
time = "^0.1"
uuid = { version = "^0.6", features = ["v4"] }
lettre = { version = "^0.8", path = "../lettre", default-features = false }
